# datablackgold

./: .gitignore  README.md  docker-compose.yml  index.html  next.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
backend/: README.md  coordinates.py  foursquare.py  googlemaps.py  main.py  render_map.py
deploy/: backend.Dockerfile  frontend.Dockerfile
public/: index.html
src/: App.css  App.js  Graph.js  List.js  Loading.js  index.js
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Contact.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  Services.tsx  Team.tsx  Training.tsx  ValueProposition.tsx
